# smtfe

./: .gitignore  .pdm.toml  README.md  pyproject.toml  tox.ini
src/smtfe/: __init__.py  bitvec.py  convert.py  function.py  utils.py  variable.py
tests/: test_formula.py  test_model.py  test_pysmt.py  test_value.py  test_variable.py
